--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minette-discord",
   "version": "3.0.0",
-  "description": "the fact that it functions is amazing",
+  "description": "huh sounds alot like andy",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,8 @@
     "node": "16.x"
   },
   "dependencies": {
-    "discord.js": "^13.5.0",
+    "axios": "^0.24.0",
+    "discord.js": "^14.6.0",
     "mongoose": "^6.2.0"
   }
 }
